WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273610
[JSC] Keeping Identifiers in PolymorphicAccessJITStubRoutine is not necessary
https://bugs.webkit.org/show_bug.cgi?id=273610
Summary
[JSC] Keeping Identifiers in PolymorphicAccessJITStubRoutine is not necessary
Yusuke Suzuki
Reported
2024-05-02 00:17:07 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-02 00:17:19 PDT
<
rdar://problem/127411952
>
Yusuke Suzuki
Comment 2
2024-05-02 00:19:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28038
EWS
Comment 3
2024-05-02 09:38:29 PDT
Committed
278268@main
(244f3f7a2691): <
https://commits.webkit.org/278268@main
> Reviewed commits have been landed. Closing PR #28038 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug