[JSC] Keeping Identifiers in PolymorphicAccessJITStubRoutine is not necessary https://bugs.webkit.org/show_bug.cgi?id=273610 rdar://127411952

Reviewed by Justin Michaud.

We are using shared JIT stub only for Baseline JIT IC, and ById case with Baseline JIT IC always has
CodeBlock which holds CacheableIdentifier. So JIT stub itself does not need to keep them.
When the stub is no longer used, then it gets zero-ref-count, and removed from shared JIT stub table automatically.

* Source/JavaScriptCore/jit/GCAwareJITStubRoutine.cpp:
(JSC::PolymorphicAccessJITStubRoutine::addedToSharedJITStubSet):
* Source/JavaScriptCore/jit/GCAwareJITStubRoutine.h:

Canonical link: https://commits.webkit.org/278268@main