Source/JavaScriptCore/jit/GCAwareJITStubRoutine.cpp
@@ -133,16 +133,6 @@ unsigned PolymorphicAccessJITStubRoutine::computeHash(const FixedVector<RefPtr<A
 void PolymorphicAccessJITStubRoutine::addedToSharedJITStubSet()
 {
     m_isInSharedJITStubSet = true;
-    // Since this stub no longer belongs to any CodeBlocks (since it is shared),
-    // identifiers need to be owned by this stub itself.
-    m_identifiers = FixedVector<Identifier>(m_cases.size());
-    unsigned index = 0;
-    for (auto& accessCase : m_cases) {
-        auto identifier = Identifier::fromUid(m_vm, accessCase->uid());
-        accessCase->updateIdentifier(CacheableIdentifier::createFromSharedStub(identifier.impl()));
-        m_identifiers[index] = WTFMove(identifier);
-        ++index;
-    }
 }
 
 MarkingGCAwareJITStubRoutine::MarkingGCAwareJITStubRoutine(
